_sass/_archive.scss
.text-primary {
    color: $primary-color;
}

.btn {
    margin-right: 0.5em;

    i {
        position: relative;
        line-height: 1;
        top: 1px;
    }
}

.tag__list {
    border-bottom: 1px solid #f2f3f3;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    margin-bottom: 3rem;
    background: #fff;
    top: 0;

    &.sticky {
        a {
            display: inline-block;
        }
    }

    .archive__subtitle {
        border-bottom: none;
    }

    details, summary {
        -webkit-touch-callout: none;
        -webkit-user-select: none;
        -khtml-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        outline: 0;
    }

    summary {
        font-size: .75rem;
        margin-bottom: 10px;
    }

    details[open] SUMMARY ~ * {
        animation: sweep .5s ease-in-out;
    }

    @keyframes sweep {
        0%    {opacity: 0; margin-left: -10px}
        100%  {opacity: 1; margin-left: 0px}
    }
}

.feature__item--center {
    a {
        color: inherit;
        text-decoration: none;
    }
    
    .archive__item {
        margin: 0 40px;

        .archive__item-excerpt-continue {
            margin-top: 40px;

            a {
                text-decoration: none;
            }
        }
    }
}

.archive__item {
    .lead {
        font-size: $type-size-4;
    }
}

.archive__item-teaser {
    @include breakpoint($large) {
        position: relative;
        float: left;
        margin-top: 5px;
        margin-right: 20px;

        img {
            object-fit: cover;
            height: 100px;
            width: 100px;
        }
    }
}

